# ChatHeaven

./: .dockerfile  .gitignore  .nixpacks.toml  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  message.py  models.py  user.py
backend/app/prompts/: A.md  __init__.py
backend/app/routers/: __init__.py  auth.py  chat.py  user.py  websocket.py
backend/app/schemas/: __init__.py  auth.py  chat.py
backend/app/services/: __init__.py  chat_service.py  dependencies.py  security.py
backend/app/utils/: agent.py  document_processing.py  vector_search.py  vector_store.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/components/layout/: ChatItem.tsx  MobileChatMenu.tsx  Sidebar.tsx
frontend/src/components/settings/: SecuritySettings.tsx  Settings.tsx  SettingsButton.tsx  ThemeSettings.tsx
frontend/src/hooks/: use-auth.ts  use-change-password.ts  use-chats.ts  use-theme.ts  use-websocket.ts
frontend/src/pages/: Index.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/services/: authService.ts
